Bug 1455511: Always prune the accessibility tree for sliders. r=surkov

It doesn't make sense for a slider to have descendants and this confuses NVDA.

MozReview-Commit-ID: 2A3gqTSu38g